RESOLVED FIXED222389
border-image-outset doesn't handle float values
https://bugs.webkit.org/show_bug.cgi?id=222389
Summary border-image-outset doesn't handle float values
Antoine Quint
Reported 2021-02-24 15:19:30 PST
border-image-outset doesn't handle float values
Attachments
Patch (17.63 KB, patch)
2021-02-24 15:21 PST, Antoine Quint
no flags
Antoine Quint
Comment 1 2021-02-24 15:21:42 PST
EWS
Comment 2 2021-02-25 00:31:30 PST
Committed r273478: <https://commits.webkit.org/r273478> All reviewed patches have been landed. Closing bug and clearing flags on attachment 421469 [details].
Radar WebKit Bug Importer
Comment 3 2021-02-25 00:32:14 PST
Note You need to log in before you can comment on or make changes to this bug.