border-image-outset doesn't handle float values https://bugs.webkit.org/show_bug.cgi?id=222389

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Pass an extra 28 WPT tests for border-image-outset.

* web-platform-tests/css/css-backgrounds/animations/border-image-outset-interpolation-expected.txt:

Source/WebCore:

We would get the int values rather than float values for the CSSValue created while parsing
the border-image-outset property.

* css/CSSToStyleMap.cpp:
(WebCore::CSSToStyleMap::mapNinePieceImageQuad):


Canonical link: https://commits.webkit.org/234557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273478 268f45cc-cd09-0410-ab3c-d52691b4dbfc